<resources>
    <string name="app_name">iReport</string>
    <string name="upload_an_image">Upload Report</string>
    <string name="camera">camera</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="xyzkumar_gmail_com">xyzkumar@gmail.com</string>
    <string name="age_18_y">Age : 18 Y</string>
    <string name="todo">TODO</string>
    <string name="xyz_kumar">XYZ Kumar</string>
    <string name="search">Search</string>
    <string name="name">NAME</string>
    <string name="age">Age</string>
    <string name="or_say_this_code">OR SAY THIS CODE</string>
    <string name="scan_this_to_share">SCAN OR SHAxKE THIS! To SHARE </string>
    <string name="click_to_upload">Click to UPLOAD</string>
    <string name="save_details">SAVE DETAILS</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="send_password_reset_link">SEND PASSWORD RESET LINK</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="forgot">FORGOT</string>
</resources>
