<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".qr.GeneratorActivity">

    <TextView
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="18dp"
        android:text="@string/scan_this_to_share"
        android:textColor="#000000"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/scan"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:text="@string/or_say_this_code"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin"
        android:layout_centerHorizontal="true"
        android:layout_margin="35dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
