<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".Forgot">

    <ImageView
        android:layout_width="match_parent"
        android:background="@drawable/party"
        android:scaleType="fitXY"
        android:id="@+id/party"
        android:contentDescription="@string/todo"
        android:layout_height="170dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/party"
        android:contentDescription="@string/todo"
        android:layout_margin="35dp"
        android:src="@drawable/ireport" />

    <com.libizo.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/abc_gmail_com"
        app:libIZO_setPrefix=" "
        android:textColorHint="@color/colorPrimaryDark"
        android:gravity="center"
        app:libIZO_setBackgroundColor="#FFFFFF"
        app:libIZO_setPrefixTextColor="@color/colorPrimary"
        app:libIZO_clearIconTint="@color/colorAccent"
        app:libIZO_setBorderColor="@color/colorAccent"
        app:libIZO_setCursorColor="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        app:libIZO_setBorderView="true"
        android:padding="8dp"
        android:id="@+id/email"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="180dp"
        app:libIZO_setClearIconVisible="true"
        app:libIZO_setCornerRadius="20dp"
        app:libIZO_setStrokeWidth="2dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:background="@drawable/shape"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:text="@string/send_password_reset_link"
        android:id="@+id/forgot"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_height="40dp"/>
    <ProgressBar
        android:id="@+id/progressLogin"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:indeterminate="true"
        android:visibility="invisible"
        />

</RelativeLayout>